# SWE-Portfolio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build-fullstack.sh  docker-compose.yml  package.json  pnpm-lock.yaml  podman-compose.yml  requirements.txt  setup.ksh
.github/workflows/: deploy.yml
back_end/: Cargo.toml  Dockerfile
back_end/src/: constants.rs  main.rs  services.rs
back_end/src/api/: github_stats.rs  mod.rs  page_stats.rs
back_end/src/lib/: mod.rs  supabase.rs
back_end/src/lib/models/: blog.rs  github_stats.rs
back_end/src/lib/queries/: blog.rs  graphql.rs  mod.rs
back_end/src/lib/schemas/: github_stats.rs  mod.rs  page_stats.rs
back_end/src/lib/types/: error.rs  mod.rs
back_end/src/lib/utils/: api.rs  github.rs  mod.rs  page.rs  supabase.rs
back_end/src/middlewares/: authenticator.rs  usersecure.rs
back_end/src/models/: page_stats.rs
back_end/src/routers/: blog.rs  contact.rs  github_stats.rs  mod.rs  page_stats.rs  project_info.rs  resume.rs  weather.rs
back_end/src/routes/: auth.rs  blog.rs  github_stats.rs  mod.rs  notimplemented.rs  page_stats.rs
back_end/src/schemas/: github_stats.rs  graphql.rs  mod.rs
back_end/src/types/: error.rs  graphql.rs
back_end/src/utils/: github.rs  graphql.rs  mod.rs  page.rs  supabase.rs
front_end/: Dockerfile  package.json  pnpm-lock.yaml  robots.txt  svelte.config.js
front_end/src/: app.html
front_end/src/components/: Contacts.svelte  EmailContact.svelte  Experience.svelte  ExperienceItem.svelte  ExperienceSection.svelte  Footer.svelte  Header.svelte  Hero.svelte  IconWithName.svelte  Portfolio.svelte  ProjectCard.svelte  Projects.svelte  SocialIcon.svelte  TechCategory.svelte  TechIcon.svelte
front_end/src/lib/: constants.js
front_end/src/lib/constants/: backend.js
front_end/src/routes/: +layout.svelte  +page.svelte
front_end/src/sections/: Experience.svelte  Footer.svelte  Header.svelte  Hero.svelte  Portfolio.svelte  Projects.svelte
k8s/: backend-config-map.yaml  backend-deployment.yaml  backend-network-policy.yaml  backend-secrets.yaml  backend-service.yaml  frontend-config-map.yaml  frontend-deployment.yaml  frontend-network-policy.yaml  frontend-secrets.yaml  frontend-service.yaml  pvc.yaml
k8s-config/: backend-deploy.yaml  backend-service.yaml  frontend-deploy.yaml  frontend-service.yaml  network-policy.yaml
src/back_end/: Cargo.toml  Dockerfile
src/back_end/src/: constants.rs  main.rs
src/back_end/src/api/: github_stats.rs  mod.rs  page_stats.rs
src/back_end/src/models/: github_stats.rs
src/back_end/src/queries/: graphql.rs
src/back_end/src/schemas/: github_stats.rs
src/back_end/src/types/: error.rs  graphql.rs
src/back_end/src/utils/: github.rs  mod.rs  page.rs
src/front_end/: .npmrc  Dockerfile  package.json  pnpm-lock.yaml  robots.txt  svelte.config.js  tailwind.config.ts  vite.config.ts
src/front_end/src/: app.css  app.html
src/front_end/src/components/: EmailContact.svelte  ExperienceItem.svelte  IconWithName.svelte  LanguageCategories.svelte  ProjectCard.svelte  ResumeButton.svelte  ResumeModal.svelte  SocialIcon.svelte  TechCategory.svelte  ThemeToggle.svelte
src/front_end/src/lib/: constants.js  constants.ts  data.ts  types.ts
src/front_end/src/lib/stores/: resumeModal.js  theme.js  theme.ts
src/front_end/src/lib/styles/: styles.css
src/front_end/src/routes/: +layout.svelte  +page.svelte
src/front_end/src/sections/: Experience.svelte  Footer.svelte  Header.svelte  Hero.svelte  Portfolio.svelte  Projects.svelte
src/front_end/src/utils/: techIcons.ts
src/front_end/static/: localhost.html
