[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0.93"
awc = "3.5.1"
chrono = { version = "0.4.38", features = ["clock"] }
deadpool = "0.12.1"
deadpool-postgres = "0.14.0"
dotenv = "0.15.0"
juniper = "0.16.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.123"
serde_with = { version = "3.11.0", features = ["chrono"] }
tokio = { version = "1.41.1", features = ["fs"] }

[profile.dev]
opt-level = 1            # Minimal optimizations for better runtime performance while keeping compile times fast
debug = true             # Includes debug info for better debugging experience
overflow-checks = true   # Enables integer overflow checks (recommended for dev)
lto = "off"              # Disables Link-Time Optimization to speed up compile times
panic = "unwind"         # Enables unwinding for better backtraces and debugging
incremental = true       # Enables incremental compilation for faster rebuilds
codegen-units = 256      # More codegen units to parallelize compilation, improving speed

[profile.dev.package."*"] # Optional: enable fast build settings for dependencies
opt-level = 0            # No optimizations for dependencies in dev for even faster compile times
