[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-governor = "0.7.0"
actix-web = "4"
awc = "3.5.1"
chrono = { version = "0.4.38", features = ["clock", "now", "rkyv", "serde"] }
deadpool = "0.12.1"
deadpool-postgres = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
juniper = "0.16.1"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.123"

[profile.dev]
opt-level = 1            # Minimal optimizations for better runtime performance while keeping compile times fast
debug = true             # Includes debug info for better debugging experience
overflow-checks = true   # Enables integer overflow checks (recommended for dev)
lto = "off"              # Disables Link-Time Optimization to speed up compile times
panic = "unwind"         # Enables unwinding for better backtraces and debugging
incremental = true       # Enables incremental compilation for faster rebuilds
codegen-units = 256      # More codegen units to parallelize compilation, improving speed

[profile.dev.package."*"] # Optional: enable fast build settings for dependencies
opt-level = 0            # No optimizations for dependencies in dev for even faster compile times

[profile.release]
lto = true
